feat: Add TCN, HMM, and Embedder services to NGINX configuration and update frontend layout

--- a/docker/services/frontend/nginx.conf
+++ b/docker/services/frontend/nginx.conf
@@ -50,6 +50,18 @@ http {
         server 10.1.19.102:3000;
     }
 
+    upstream tcn-backend {
+        server trading-tcn:3005;
+    }
+
+    upstream hmm-backend {
+        server trading-hmm:3006;
+    }
+
+    upstream embedder-backend {
+        server trading-embedder:3007;
+    }
+
     server {
         listen 80;
         server_name localhost;
@@ -127,6 +139,48 @@ http {
             proxy_read_timeout 300s;
         }
 
+        # TCN-Pattern Service - Direct Access
+        location /tcn/ {
+            proxy_pass http://tcn-backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 300s;
+        }
+
+        # HMM-Regime Service - Direct Access
+        location /hmm/ {
+            proxy_pass http://hmm-backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 300s;
+        }
+
+        # Embedder Service - Direct Access
+        location /embedder/ {
+            proxy_pass http://embedder-backend/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 300s;
+        }
+
         # =====================================================
         # API Gateway Routes
         # =====================================================
@@ -173,6 +227,49 @@ http {
         # RAG Service (Port 3003)
         location /api/v1/rag/ {
             proxy_pass http://rag-backend/api/v1/rag/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
+        }
+
+        # TCN-Pattern Service (Port 3005)
+        location /api/v1/patterns/ {
+            proxy_pass http://tcn-backend/api/v1/patterns/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
+        }
+
+        # HMM-Regime Service (Port 3006)
+        location /api/v1/regime/ {
+            proxy_pass http://hmm-backend/api/v1/regime/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
+        }
+
+        location /api/v1/signals/ {
+            proxy_pass http://hmm-backend/api/v1/signals/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
+        }
+
+        # Embedder Service (Port 3007)
+        location /api/v1/embeddings/ {
+            proxy_pass http://embedder-backend/api/v1/embeddings/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
