--- a/docker/services/frontend/Dockerfile
+++ b/docker/services/frontend/Dockerfile
@@ -9,12 +9,18 @@ ARG DATA_SERVICE_PORT=3001
 ARG NHITS_SERVICE_PORT=3002
 ARG RAG_SERVICE_PORT=3003
 ARG LLM_SERVICE_PORT=3004
+ARG TCN_SERVICE_PORT=3005
+ARG HMM_SERVICE_PORT=3006
+ARG EMBEDDER_SERVICE_PORT=3007
 
 # Set environment variables
 ENV DATA_SERVICE_PORT=${DATA_SERVICE_PORT}
 ENV NHITS_SERVICE_PORT=${NHITS_SERVICE_PORT}
 ENV RAG_SERVICE_PORT=${RAG_SERVICE_PORT}
 ENV LLM_SERVICE_PORT=${LLM_SERVICE_PORT}
+ENV TCN_SERVICE_PORT=${TCN_SERVICE_PORT}
+ENV HMM_SERVICE_PORT=${HMM_SERVICE_PORT}
+ENV EMBEDDER_SERVICE_PORT=${EMBEDDER_SERVICE_PORT}
 
 # Copy nginx template configuration
 COPY docker/services/frontend/nginx.conf.template /etc/nginx/nginx.conf.template
