feat: Add centralized microservices configuration and service-specific settings
- Implemented `microservices.py` for centralized configuration of all microservices, including service definitions, ports, and URLs.
- Created `embedder_app/config.py` for service-specific settings, inheriting from the central configuration.
- Introduced shared components in `shared/__init__.py`, including health checks, logging, and model loading utilities.
- Developed a standardized health check module in `shared/health.py` for consistent monitoring across services.
- Established a logging configuration in `shared/logging_config.py` for uniform logging practices.
- Created a model loader base class in `shared/model_loader.py` to handle model loading with timeout and device management.
- Implemented a service base class in `shared/service_base.py` to encapsulate common functionality for microservices, including lifecycle management and health checks.

--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,15 @@ SERVICE_HOST=0.0.0.0
 SERVICE_PORT=3011
 LOG_LEVEL=INFO
 
-# Microservices Ports
+# Microservices Ports (see src/config/microservices.py for full config)
+FRONTEND_PORT=3000
 DATA_SERVICE_PORT=3001
 NHITS_SERVICE_PORT=3002
-RAG_SERVICE_PORT=3003
-LLM_SERVICE_PORT=3004
+TCN_SERVICE_PORT=3003
+HMM_SERVICE_PORT=3004
+EMBEDDER_SERVICE_PORT=3005
+RAG_SERVICE_PORT=3008
+LLM_SERVICE_PORT=3009
 
 # Ollama Configuration (local or remote LLM)
 OLLAMA_HOST=http://localhost:11434
