--- a/.env.microservices
+++ b/.env.microservices
@@ -1,25 +1,52 @@
 # KI Trading Model - Microservices Configuration
+# ==============================================
+# Zentrale Konfiguration für alle Microservices
+# Siehe auch: src/config/microservices.py
 
-# Microservices Ports
+# ==============================================
+# Service Ports (Standard-Zuweisung)
+# ==============================================
+FRONTEND_PORT=3000
 DATA_SERVICE_PORT=3001
 NHITS_SERVICE_PORT=3002
-RAG_SERVICE_PORT=3003
-LLM_SERVICE_PORT=3004
+TCN_SERVICE_PORT=3003
+HMM_SERVICE_PORT=3004
+EMBEDDER_SERVICE_PORT=3005
+RAG_SERVICE_PORT=3008
+LLM_SERVICE_PORT=3009
 
-# EasyInsight API Configuration
+# ==============================================
+# External APIs
+# ==============================================
 EASYINSIGHT_API_URL=http://10.1.19.102:3000/api
 
+# ==============================================
 # Ollama/LLM Configuration
+# ==============================================
 OLLAMA_MODEL=llama3.1:70b
 OLLAMA_HOST=http://10.1.19.101:11434
 
+# ==============================================
 # NHITS Configuration
+# ==============================================
 NHITS_AUTO_RETRAIN_DAYS=7
 NHITS_USE_GPU=1
 
-# Sync Configuration
-TIMESCALE_SYNC_ENABLED=true
-TIMESCALE_SYNC_INTERVAL_MINUTES=60
+# ==============================================
+# Embedder Configuration
+# ==============================================
+EMBEDDING_CACHE_SIZE=10000
+EMBEDDER_WARMUP=false
+USE_GPU=true
 
+# ==============================================
+# Model Loading Configuration
+# ==============================================
+MODEL_LOAD_TIMEOUT=180
+LAZY_LOAD_MODELS=true
+
+# ==============================================
 # General
+# ==============================================
 LOG_LEVEL=INFO
+DISPLAY_TIMEZONE=Europe/Zurich
