--- a/docker/services/hmm/Dockerfile
+++ b/docker/services/hmm/Dockerfile
@@ -1,8 +1,8 @@
 # HMM-Regime Service Dockerfile
-# Port: 3006
+# Port: 3004
 
 FROM python:3.11-slim
-ARG SERVICE_PORT=3006
+ARG SERVICE_PORT=3004
 
 WORKDIR /app
 
@@ -21,6 +21,7 @@ COPY src/services/hmm_app/ ./src/services/hmm_app/
 COPY src/services/data_gateway_service.py ./src/services/
 COPY src/config/ ./src/config/
 COPY src/utils/ ./src/utils/
+COPY src/shared/ ./src/shared/
 
 # Create empty __init__.py files to avoid import issues
 RUN touch ./src/__init__.py ./src/services/__init__.py
@@ -37,4 +38,5 @@ EXPOSE ${SERVICE_PORT}
 HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
     CMD curl -f http://localhost:${SERVICE_PORT}/health || exit 1
 
-CMD ["python", "-m", "uvicorn", "src.services.hmm_app.main:app", "--host", "0.0.0.0", "--port", "3006"]
+# Dynamischer Port via Umgebungsvariable
+CMD ["sh", "-c", "python -m uvicorn src.services.hmm_app.main:app --host 0.0.0.0 --port ${PORT:-3004}"]
