--- a/docker-compose.microservices.yml
+++ b/docker-compose.microservices.yml
@@ -57,6 +57,7 @@ services:
       - symbols-data:/app/data/symbols
       - ./src:/app/src:ro
       - logs-data:/app/logs
+      - /tmp:/host_tmp:ro
     environment:
       - SERVICE_NAME=nhits
       - PORT=${NHITS_SERVICE_PORT:-3002}
@@ -103,6 +104,7 @@ services:
       - faiss-data:/app/data/faiss
       - ./src:/app/src:ro
       - logs-data:/app/logs
+      - /tmp:/host_tmp:ro
     environment:
       - SERVICE_NAME=data
       - PORT=${DATA_SERVICE_PORT:-3001}
