feat: Add testing support to data service container
- Create data service Dockerfile with pytest dependencies
- Mount tests directory and pytest.ini in container
- Set PROJECT_ROOT environment variable

--- a/docker-compose.microservices.yml
+++ b/docker-compose.microservices.yml
@@ -103,10 +103,13 @@ services:
       - symbols-data:/app/data/symbols
       - faiss-data:/app/data/faiss
       - ./src:/app/src:ro
+      - ./tests:/app/tests:ro
+      - ./pytest.ini:/app/pytest.ini:ro
       - logs-data:/app/logs
       - /tmp:/host_tmp:ro
     environment:
       - SERVICE_NAME=data
+      - PROJECT_ROOT=/app
       - PORT=${DATA_SERVICE_PORT:-3001}
       - ROOT_PATH=/data
       - EASYINSIGHT_API_URL=${EASYINSIGHT_API_URL:-http://10.1.19.102:3000/api}
