fix(frontend): Disable browser caching for HTML files
Prevents stale JavaScript from being served from browser cache

--- a/docker/services/frontend/nginx.conf
+++ b/docker/services/frontend/nginx.conf
@@ -76,6 +76,12 @@ http {
         # Frontend - Static Files
         location / {
             try_files $uri $uri/ /index.html;
+            # Disable caching for HTML files to ensure latest version
+            location ~* \.html$ {
+                add_header Cache-Control "no-cache, no-store, must-revalidate";
+                add_header Pragma "no-cache";
+                add_header Expires "0";
+            }
         }
 
         # =====================================================
