--- a/docker/services/frontend/nginx.conf
+++ b/docker/services/frontend/nginx.conf
@@ -187,6 +187,23 @@ http {
             proxy_read_timeout 300s;
         }
 
+        # Watchdog Service - Direct Access (uses resolver for dynamic DNS)
+        location /watchdog/ {
+            resolver 127.0.0.11 valid=10s ipv6=off;
+            set $watchdog_upstream trading-watchdog:3010;
+            proxy_pass http://$watchdog_upstream/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 5s;
+        }
+
         # =====================================================
         # API Gateway Routes
         # =====================================================
