--- a/docker/services/tcn/requirements.txt
+++ b/docker/services/tcn/requirements.txt
@@ -11,6 +11,7 @@ httpx>=0.25.0
 aiohttp>=3.9.0
 
 # ML/Deep Learning
+# Note: Thor GPU (sm_110) not yet supported by PyTorch - runs on CPU
 torch>=2.0.0
 numpy>=1.24.0
 
