--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -29,21 +29,21 @@ http {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
 
-    # Upstream services
+    # Upstream services - ports from environment variables
     upstream nhits-backend {
-        server trading-nhits:3002;
+        server trading-nhits:${NHITS_SERVICE_PORT};
     }
 
     upstream llm-backend {
-        server trading-llm:3009;
+        server trading-llm:${LLM_SERVICE_PORT};
     }
 
     upstream data-backend {
-        server trading-data:3001;
+        server trading-data:${DATA_SERVICE_PORT};
     }
 
     upstream rag-backend {
-        server trading-rag:3008;
+        server trading-rag:${RAG_SERVICE_PORT};
     }
 
     upstream easyinsight-backend {
@@ -51,23 +51,19 @@ http {
     }
 
     upstream tcn-backend {
-        server trading-tcn:3003;
-    }
-
-    upstream tcn-train-backend {
-        server trading-tcn-train:3013;
+        server trading-tcn:${TCN_SERVICE_PORT};
     }
 
     upstream hmm-backend {
-        server trading-hmm:3004;
+        server trading-hmm:${HMM_SERVICE_PORT};
     }
 
     upstream embedder-backend {
-        server trading-embedder:3005;
+        server trading-embedder:${EMBEDDER_SERVICE_PORT};
     }
 
     upstream watchdog-backend {
-        server trading-watchdog:3010;
+        server trading-watchdog:${WATCHDOG_SERVICE_PORT};
     }
 
     server {
@@ -84,12 +80,13 @@ http {
         # Frontend - Static Files
         location / {
             try_files $uri $uri/ /index.html;
-            # Disable caching for HTML files to ensure latest version
-            location ~* \.html$ {
-                add_header Cache-Control "no-cache, no-store, must-revalidate";
-                add_header Pragma "no-cache";
-                add_header Expires "0";
-            }
+        }
+
+        # Disable caching for HTML files to ensure latest version
+        location ~* \.html$ {
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
         }
 
         # =====================================================
@@ -153,7 +150,7 @@ http {
             proxy_read_timeout 300s;
         }
 
-        # TCN-Pattern Service - Direct Access (Inference)
+        # TCN-Pattern Service - Direct Access
         location /tcn/ {
             proxy_pass http://tcn-backend/;
             proxy_http_version 1.1;
@@ -165,20 +162,6 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
             proxy_read_timeout 300s;
-        }
-
-        # TCN-Training Service - Direct Access (Training)
-        location /tcn-train/ {
-            proxy_pass http://tcn-train-backend/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-            proxy_read_timeout 600s;  # Long timeout for training requests
         }
 
         # HMM-Regime Service - Direct Access
@@ -227,7 +210,7 @@ http {
         # API Gateway Routes
         # =====================================================
 
-        # NHITS Service (Port 3002)
+        # NHITS Service
         location /api/v1/forecast/ {
             proxy_pass http://nhits-backend/api/v1/forecast/;
             proxy_http_version 1.1;
@@ -242,7 +225,7 @@ http {
             proxy_connect_timeout 75s;
         }
 
-        # LLM Service (Port 3004)
+        # LLM Service
         location /api/v1/analyze {
             proxy_pass http://llm-backend/api/v1/analyze;
             proxy_http_version 1.1;
@@ -266,7 +249,7 @@ http {
             proxy_read_timeout 300s;
         }
 
-        # RAG Service (Port 3003)
+        # RAG Service
         location /api/v1/rag/ {
             proxy_pass http://rag-backend/api/v1/rag/;
             proxy_http_version 1.1;
@@ -277,7 +260,7 @@ http {
             proxy_read_timeout 300s;
         }
 
-        # TCN-Pattern Service (Port 3005)
+        # TCN-Pattern Service (Port 3003)
         location /api/v1/patterns/ {
             proxy_pass http://tcn-backend/api/v1/patterns/;
             proxy_http_version 1.1;
@@ -288,7 +271,7 @@ http {
             proxy_read_timeout 300s;
         }
 
-        # HMM-Regime Service (Port 3006)
+        # HMM-Regime Service (Port 3004)
         location /api/v1/regime/ {
             proxy_pass http://hmm-backend/api/v1/regime/;
             proxy_http_version 1.1;
@@ -309,7 +292,7 @@ http {
             proxy_read_timeout 300s;
         }
 
-        # Embedder Service (Port 3007)
+        # Embedder Service (Port 3005)
         location /api/v1/embeddings/ {
             proxy_pass http://embedder-backend/api/v1/embeddings/;
             proxy_http_version 1.1;
@@ -330,7 +313,7 @@ http {
             proxy_read_timeout 300s;
         }
 
-        # Data Service (Port 3001)
+        # Data Service
         location /api/v1/symbols {
             proxy_pass http://data-backend/api/v1/symbols;
             proxy_http_version 1.1;
@@ -400,8 +383,8 @@ http {
         # Health check endpoint
         location /health {
             access_log off;
-            default_type text/plain;
             return 200 "healthy\n";
+            add_header Content-Type text/plain;
         }
 
         # =====================================================
